fix external_id in template and typos
